// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AutomationSubscriptionDescription /> should render for customers already with full add-on features 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Your current subscription started on
       
      <b>
        Aug 22
      </b>
      .
      <br />
      <br />
      If you cancel now, you will loose access to self-service
       
      custom report issue flow 
      immediately.
    </div>
    <div
      class="amount amount"
    >
      <b>
        $0
      </b>
       
      / 
      month
    </div>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers already with legacy add-on features 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Unlock advanced features of the self-service, and track the performance!
      <br />
      Questions?
       
      <a
        href="mailto:support@gorgias.com"
      >
        <b>
          Get in touch!
        </b>
      </a>
    </div>
    <div
      class="amount amount"
    >
      <b>
        $20
      </b>
       
      / 
      month
    </div>
  </div>
  <div
    class="features"
  >
    <li
      class="d-flex align-items-center featureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="icon material-icons"
        >
          low_priority
        </i>
      </span>
      <span>
        Track, Return, Cancel & Custom
         
        <b>
          workflows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center featureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="icon material-icons"
        >
          slow_motion_video
        </i>
      </span>
      <span>
        Self-service portal in 
        <b>
          chat
        </b>
         and
         
        <b>
          help center
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center featureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="icon material-icons"
        >
          insights
        </i>
      </span>
      <span>
        Self-service 
        <b>
          statistics
        </b>
      </span>
    </li>
  </div>
</div>
`;

exports[`<AutomationSubscriptionDescription /> should render for customers without any addon features 1`] = `
<div
  class="description"
>
  <div
    class="flex"
  >
    <div>
      Unlock the 
      <b>
        self-service
      </b>
       features, to answer customers 
      <b>
        quickly, 24/7
      </b>
      !
      <br />
      Questions?
       
      <a
        href="mailto:support@gorgias.com"
      >
        <b>
          Get in touch!
        </b>
      </a>
    </div>
    <div
      class="amount amount"
    >
      <b>
        $20
      </b>
       
      / 
      month
    </div>
  </div>
  <div
    class="features"
  >
    <li
      class="d-flex align-items-center featureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="icon material-icons"
        >
          low_priority
        </i>
      </span>
      <span>
        Track, Return, Cancel & Custom
         
        <b>
          workflows
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center featureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="icon material-icons"
        >
          slow_motion_video
        </i>
      </span>
      <span>
        Self-service portal in 
        <b>
          chat
        </b>
         and
         
        <b>
          help center
        </b>
      </span>
    </li>
    <li
      class="d-flex align-items-center featureListItem"
    >
      <span
        class="featureIcon mr-3"
      >
        <i
          class="icon material-icons"
        >
          insights
        </i>
      </span>
      <span>
        Self-service 
        <b>
          statistics
        </b>
      </span>
    </li>
  </div>
</div>
`;
